[gd_scene load_steps=15 format=3 uid="uid://b4uaaig27imk5"]

[ext_resource type="Texture2D" uid="uid://hikqac5bqf4t" path="res://Asset/Image/shoot.png" id="1_r437r"]
[ext_resource type="Script" uid="uid://naiaw5ek614s" path="res://Scene/enemy_02.gd" id="1_rqjyt"]
[ext_resource type="Texture2D" uid="uid://cfcg3wl832dse" path="res://Asset/Image/player_sh.png" id="3_7ud57"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rqjyt"]
atlas = ExtResource("1_r437r")
region = Rect2(256, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ud57"]
atlas = ExtResource("1_r437r")
region = Rect2(256, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wn8js"]
atlas = ExtResource("1_r437r")
region = Rect2(288, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbmex"]
atlas = ExtResource("3_7ud57")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dnp4"]
atlas = ExtResource("3_7ud57")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6phwe"]
atlas = ExtResource("3_7ud57")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2o158"]
atlas = ExtResource("3_7ud57")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0ssf"]
atlas = ExtResource("3_7ud57")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikk3e"]
atlas = ExtResource("3_7ud57")
region = Rect2(160, 160, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wbmex"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqjyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ud57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wn8js")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbmex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dnp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6phwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2o158")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0ssf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikk3e")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"explode",
"speed": 24.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ud57"]
size = Vector2(28, 26)

[node name="Enemy_02" type="Area2D" node_paths=PackedStringArray("animator") groups=["Enemy"]]
z_index = 1000
scale = Vector2(4, 4)
script = ExtResource("1_rqjyt")
animator = NodePath("AnimatedSprite2D")
enemy02_speed = 300.0
hp = 10

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wbmex")
animation = &"explode"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7ud57")

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
